# git-clipboard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SETUP_PYPI.md  TODO.md  e2e.sh  feat_true_cut.md  git-clipboard  git-cut  git-paste  pyproject.toml  readme.org  workfile.md
.github/workflows/: publish.yml
.specstory/history/: 2025-08-30_14-54Z-implementing-git-cut-and-git-paste-tools.md
src/git_clipboard/: __init__.py  clipboard.py  cut.py  paste.py
